[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/gui/mage_single.png" type="Texture" id=1]
[ext_resource path="res://scenes/menus/enter_name_menu/ContinueButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menus/enter_name_menu/EnterNameMenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/fade_in/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/menus/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/gui/fonts/title_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/gui/fonts/text_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/gui/menu_background.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/fonts/Acme/Acme-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[node name="EnterNameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 500.0
margin_bottom = 525.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 30.0
margin_right = 463.0
margin_bottom = 439.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Menu"]
margin_right = 423.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 185 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0.486275, 0.427451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
text = "Enter Your
Name"
align = 1

[node name="MaxChar" type="Label" parent="Menu"]
margin_top = 189.0
margin_right = 423.0
margin_bottom = 279.0
rect_min_size = Vector2( 0, 90 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Max of three characters"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Menu"]
margin_top = 283.0
margin_right = 423.0
margin_bottom = 345.0
custom_fonts/font = ExtResource( 7 )
right_icon = ExtResource( 1 )
placeholder_text = "Enter Name Here"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 349.0
margin_right = 423.0
margin_bottom = 457.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 423.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Menu/CenterRow/Buttons"]
margin_right = 423.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 4.0
margin_right = 423.0
margin_bottom = 54.0

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 58.0
margin_right = 423.0
margin_bottom = 108.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
mouse_filter = 2
[connection signal="pressed" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
